--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ axum = "0.7.4"
 tower-http = { version = "0.5.1", features = ["timeout"] }
 serde = { version = "1.0.196", features = ["derive"] }
 axum-macros = "0.4.1"
+sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "tls-rustls"] }
