--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,8 @@ services:
     build:
       context: .
       target: final
+    environment:
+      - DATABASE_URL=postgresql://admin:admin@db:5432/aws-guide
     ports:
       - 3002:3000
 
@@ -21,30 +23,28 @@ services:
 # database data between container restarts. The `db-password` secret is used
 # to set the database password. You must create `db/password.txt` and add
 # a password of your choosing to it before running `docker compose up`.
-#     depends_on:
-#       db:
-#         condition: service_healthy
-#   db:
-#     image: postgres
-#     restart: always
-#     user: postgres
-#     secrets:
-#       - db-password
-#     volumes:
-#       - db-data:/var/lib/postgresql/data
-#     environment:
-#       - POSTGRES_DB=example
-#       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-#     expose:
-#       - 5432
-#     healthcheck:
-#       test: [ "CMD", "pg_isready" ]
-#       interval: 10s
-#       timeout: 5s
-#       retries: 5
-# volumes:
-#   db-data:
-# secrets:
-#   db-password:
-#     file: db/password.txt
-
+    depends_on:
+      db:
+        condition: service_healthy
+  db:
+    image: postgres:14.2
+    restart: always
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    environment:
+      # If environment is modified
+      # One also needs to change the healthcheck command below as it uses these values
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_DB=aws-guide
+      - POSTGRES_HOST=localhost
+      - POSTGRES_PORT=5432
+    ports:
+      - 5432:5432
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-U", "admin", "-d", aws-guide ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+volumes:
+  db-data:
