--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -92,6 +92,13 @@ jobs:
     - name: Print output of task def
       run: |
         echo "hello world=${{ steps.task-def.outputs.task-definition }}"
+    
+    - name: Deploy to Amazon ECS service
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        service: app-service
+        cluster: AppCluster
 
     # - name: Upload Terraform configuration
     #   uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
