--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -98,24 +98,24 @@ jobs:
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
 
-    # - name: Upload Terraform configuration
-    #   uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
-    #   id: upload-tf-config
-    #   with:
-    #     workspace: ${{ env.TF_WORKSPACE }}
-    #     directory: ${{ env.CONFIG_DIRECTORY }}
+    - name: Upload Terraform configuration
+      uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
+      id: upload-tf-config
+      with:
+        workspace: ${{ env.TF_WORKSPACE }}
+        directory: ${{ env.CONFIG_DIRECTORY }}
 
-    # - name: Terraform plan
-    #   uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
-    #   id: apply-run
-    #   with:
-    #     workspace: ${{ env.TF_WORKSPACE }}
-    #     configuration_version: ${{ steps.upload-tf-config.outputs.configuration_version_id }}
+    - name: Terraform plan
+      uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
+      id: apply-run
+      with:
+        workspace: ${{ env.TF_WORKSPACE }}
+        configuration_version: ${{ steps.upload-tf-config.outputs.configuration_version_id }}
 
-    # - name: Terraform apply
-    #   uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.0
-    #   if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
-    #   id: apply
-    #   with:
-    #     run: ${{ steps.apply-run.outputs.run_id }}
-    #     comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
+    - name: Terraform apply
+      uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.0
+      if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
+      id: apply
+      with:
+        run: ${{ steps.apply-run.outputs.run_id }}
+        comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
