Setup dummy CI workflow with Terraform (#3)
* test workflow

* update jobs name

* update workflow

* update version

* investigate task definition update

* print updated task def

* test update task def

* test new revision

* final test

* update for merge

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,6 +39,10 @@ env:
                                            # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: fargate-ci-guide-app     # set this to the name of the container in the
                                            # containerDefinitions section of your task definition
+  TF_CLOUD_ORGANIZATION: "slourp-org"
+  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+  TF_WORKSPACE: "learn-terraform-gh-actions"
+  CONFIG_DIRECTORY: "./terraform"
 
 permissions:
   contents: read
@@ -83,11 +87,30 @@ jobs:
         task-definition: ${{ env.ECS_TASK_DEFINITION }}
         container-name: ${{ env.CONTAINER_NAME }}
         image: ${{ steps.build-image.outputs.image }}
-
-    - name: Deploy Amazon ECS task definition
+    
+    - name: Create new task definition revision on ECS
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ${{ env.ECS_SERVICE }}
-        cluster: ${{ env.ECS_CLUSTER }}
-        wait-for-service-stability: true
+
+    - name: Upload Terraform configuration
+      uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
+      id: upload-tf-config
+      with:
+        workspace: ${{ env.TF_WORKSPACE }}
+        directory: ${{ env.CONFIG_DIRECTORY }}
+
+    - name: Terraform plan
+      uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
+      id: apply-run
+      with:
+        workspace: ${{ env.TF_WORKSPACE }}
+        configuration_version: ${{ steps.upload-tf-config.outputs.configuration_version_id }}
+
+    - name: Terraform apply
+      uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.0
+      if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
+      id: apply
+      with:
+        run: ${{ steps.apply-run.outputs.run_id }}
+        comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
